# SolarPowerRoofTopPotential

./: .gitignore  CITATION.cff  COP_WP.xlsx  ExampleLeeste.ipynb  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: download_tracker.md  multi_year_analysis.py  orientation_comparison.py  run_overnight.sh  uncertainty_quantification.py  validate_cutout_format.py
analysis/results/: annual_summary.csv  annual_summary_partial.csv  orientation_comparison.csv  uq_results.csv
data/: IBU_2018_010m_eu_03035_V1_0.tif  Irradation.csv  Last_240222.csv  leeste3035.gpkg  lod2_1.gpkg  lod2_1.gpkg.aux.xml  lod2_2.gpkg  lod2_2.gpkg.aux.xml  lod2_3.gpkg  lod2_3.gpkg.aux.xml  osm_leeste.gpkg
docs/: methodology.md  setup_cds_api.md
notebooks/: 01_Raster_Approach.ipynb  02_LoD2_Approach.ipynb  03_OSM_Approach.ipynb
solar_rooftop_potential.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: cli.py  config.py  data_loading.py  lod2_processing.py  osm_processing.py  solar_thermal.py
tests/: test_config.py  test_data_loading.py  test_lod2_processing.py
