[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-rooftop-potential"
version = "1.0.0"
description = "Calculate rooftop solar thermal and PV potential from ERA5 weather data and open geodata"
authors = [{name = "Karim Shawky"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=2.0",
    "atlite>=0.2.11",
    "cartopy>=0.21",
    "hvplot>=0.9",
    "rasterio>=1.3",
    "geopandas>=0.13",
    "cdsapi>=0.6",
    "xarray>=2023",
    "openpyxl>=3.1",
]
