[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solar-rooftop-potential"
version = "1.0.0"
description = "Calculate rooftop solar thermal and PV potential from ERA5 weather data and open geodata"
authors = [{name = "Karim Shawky"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.21",
    "pandas>=2.0",
    "atlite>=0.2.11",
    "cartopy>=0.21",
    "hvplot>=0.9",
    "rasterio>=1.3",
    "geopandas>=0.13",
    "cdsapi>=0.6",
    "xarray>=2023",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.scripts]
solar-tool = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "pyright>=1.1",
]
oemof = [
    "oemof.thermal>=0.0.8",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
